css/index.css
/*
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied.  See the License for the
 * specific language governing permissions and limitations
 * under the License.
 */
* {
    -webkit-tap-highlight-color: rgba(0,0,0,0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
	margin:0;padding:0;
}
@font-face {
    font-family: 'vodaofoneregular';
    src: url('../img/VODAFONERG_0.TTF');
}
@font-face {
    font-family: 'vodafonebold';
    src: url('../img/VODAFONERG.TTF');
}
@font-face {
    font-family: 'timer';
    src: url('../img/digital-7_1.ttf');
}
@font-face {
    font-family: 'roboto';
    src: url('../img/Roboto-Regular.ttf');
}
@font-face {
    font-family: 'robotolight';
    src: url('../img/Roboto-Light.ttf');
}

html, body {
    height:100%;
}
body {
	font-family: 'vodaofoneregular';
	font-size:50px;
    -webkit-touch-callout: none;                /* prevent callout to copy image, etc when tap to hold */
    -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
    -webkit-user-select: none;                  /* prevent copy paste, to allow, change 'none' to 'text' */
    height:100%;
    margin:0px;
    padding:0px;
    text-transform:normal;
    width:100%;
}
a{text-decoration:none;}
video { 
    position: fixed;
    top: 50%;
    left: 50%;
    min-width: 100%;
    min-height: 100%;
    width: auto;
    height: auto;
    z-index: -100;
    transform: translateX(-50%) translateY(-50%);
	background: url('../img/bg1.png') no-repeat;
  background-size: cover;
  transition: 1s opacity;
}
#connectpage{
	font-family: 'vodaofoneregular';
	font-size:50px;
}
#connectpage label,#connectpage input,#connectpage button{
	font-family: 'vodaofoneregular';
	font-size:50px;
}
#cpanelpage,#uploadpage,#downloadspage,#summarypage,#youtubepage,#apppage{
	background: url('../img/bg1.png');
	 -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}
h1 {
    font-size:40px;
    font-weight:normal;
    margin:0px;
    overflow:visible;
    padding:0px;
    text-align:center;
	color:white;
}

.event {
    border-radius:4px;
    -webkit-border-radius:4px;
    color:#FFFFFF;
    font-size:12px;
    margin:0px 30px;
    padding:2px 0px;
}

.event.listening {
    background-color:#333333;
    display:block;
}

.event.received {
    background-color:#4B946A;
    display:none;
}

@keyframes fade {
    from { opacity: 1.0; }
    50% { opacity: 0.4; }
    to { opacity: 1.0; }
}
 
@-webkit-keyframes fade {
    from { opacity: 1.0; }
    50% { opacity: 0.4; }
    to { opacity: 1.0; }
}
 
.blink {
    animation:fade 3000ms infinite;
    -webkit-animation:fade 3000ms infinite;
}
#mainpage{
	background: white url('../img/1.jpg') no-repeat center center fixed; 
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}
.thumper{margin-top: 75px;}
.yt1{
	background: white url('../img/thumb4.jpg') no-repeat; 
	margin-right:45px;
}
.yt2{
	background: white url('../img/thumb3.jpg') no-repeat; 
}
.overlay{
	background:rgba(00,00,00,0.3);
	    border-radius: 50%;
		width:100%;
		height:100%;
		position:relative;
		text-align:center;
}
.overlay>img{
	position: absolute;
    bottom: 10px;
    width: 50px;
    left: 75px;
}
.lsidecontainer{
	float:left;
	width:40%;
	height:100vh;
	/*background: white url('../img/21.jpg') no-repeat center center fixed; */
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}
.rsidecontainer{
	float:left;
	width:60%;
	position:relative;
}
#apppage .rsidecontainer{
	background:white;'
	height:100%;
}
#cpanelpage .rsidecontainer>.container,#uploadpage .rsidecontainer>.container{
	width:100%;
	height:50%;
	margin-top:15%;
}
#cpanelpage h1,#uploadpage h1{
	text-transform: none;
	text-align:left;
	color:white;
	font-family: 'vodaofoneregular';
	font-size:90px;
}
#cpanelpage .lsidecontainer h1,#uploadpage .lsidecontainer h1{
	color:white;
	font-family: 'vodafonebold';
	text-transform: capitalize;
	margin-top:95%;
	margin-left:10%;
	text-align:left;
	font-size:90px;
}
#downloadspage .lsidecontainer h1{
	color:white;
	text-align:left;
	font-size:90px;
	font-family: 'vodafonebold';
	text-transform: none;
	margin-top:70%;
	margin-left:5%;
}
#summarypage .lsidecontainer h1,#youtubepage .lsidecontainer h1,#apppage .lsidecontainer h1{
	color:white;
	text-align:left;
	font-size:90px;
	font-family: 'vodafonebold';
	text-transform: normal;
	margin-top:90%;
	margin-left:5%;
}

.col3{
	width: 28%;
    float: left;
    margin: 20px;
}

.col2{
	width: 45%;
    float: left;
    margin: 20px;
	color:black;
	text-align:center;
	 -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

.col3 img{
	width:100%;
	height:70%;
	padding:20px;
}
.icon{
	width:100%;
	height:100vh;
	background:transparent;
	padding:20px;
}
#timer3G,#timer4G{
	font-size:200px;
	font-family:'vodaofoneregular';
	color:white;
	margin-top:120px;
}
.clear{
	clear:both;
}
.back{
	position:fixed;
	bottom:20px;
	right:20px;
	z-index:9999;
}
.back>img{
	max-width:35%;
}
.btmsg{
	color: white;
    font-size: 25px;
    line-height: 30px;
    margin-top: 30px;
    position: fixed;
    bottom: 35px;
}
.othernetwork{
	color: white;
    font-size: 35px;
    margin-top: 15px;
}
.disabler{
	opacity:0.5;
}
.thumper{
	float:left;
	width:100%;
}
.thumper a{
	text-decoration:none;
}
.thumper h1{
	text-align:center;
	color:rgb(230,30,37);
	font-family: 'vodafonebold';
	font-size:80px;
}
.thumper h2{
	text-align:center;
	color:rgb(230,30,37);
	font-family: 'vodaofoneregular';
	font-size:60px;
}
#summarypage .rsidecontainer>.container,#youtubepage .rsidecontainer>.container{
	width:100%;
	height:70%;
	margin-top:8%;
}
#youtubepage .rsidecontainer>.container{
	border-bottom:2px solid #eee;
	text-align:center;
	margin-top:10%;
}
#youtubepage .rsidecontainer>.container>img{
	width:300px;
	height:300px;
	margin-bottom:50px;
}
#summarypage .rsidecontainer>.container .col2{
	text-align:center;
	margin-top:50px;
}
.circle{
	text-align:center;
	border-radius:50%;
	border:2px solid white;
	width:500px;
	height:500px;
}
.appblk{
	background:white;
	border-radius:2px;
	border:1px solid #eee;
	margin:20px 20px 0 20px;
	float:left;
	width:95%;
	position:relative;
}
.appicon{
	float:left;
	width:20%;
}
.appdetail{
	float:left;
	width:65%;
	padding-top:20px;
}
.appicon>img{
	height:200px;
	width:200px;
}
.appdetail h2{
	font-family:'roboto';
	font-size:60px;
	color:#333;
}
.appdetail p{
	font-family:'robotolight';
	font-size:30px;
	color:#333;
}

.appdetail a{
	position:absolute;
	right:40px;
	bottom:10px;
	font-size:35px;
	font-family:'robotolight';
	z-index:10000;
}
.appdetail .ui-btn,.appdetail .ui-btn:hover{
	background-color:#689F38;
	color:white;
}
.ui-content{padding:0;}
#connectpage .ui-content{padding:1em;}
#cpanelpage .col3,#uploadpage .col3{
	width: 175px;
    margin: 10px;
    float: left;
    text-align: center;
}
.col3 h3{
	color: white;
    font-size: 26px;
    font-weight: 300;
}
.ripplelink{
  display:block;
  float:left;
  width:200px;
  height:200px;
  text-align:center;
  color:#fff;
  text-decoration:none;
  position:relative;
  overflow:hidden;
  -webkit-transition: all 0.2s ease;
  -moz-transition: all 0.2s ease;
  -o-transition: all 0.2s ease;
  transition: all 0.2s ease;
  z-index:0;
   -webkit-border-radius: 50%;
  -moz-border-radius: 50%;
  -ms-border-radius: 50%;
  -o-border-radius: 50%;
  border-radius: 50%;
}

.ink {
  display: block;
  position: absolute;
  background:rgba(255, 255, 255, 0.5);
  border-radius: 100%;
  -webkit-transform:scale(0);
     -moz-transform:scale(0);
       -o-transform:scale(0);
          transform:scale(0);
}

.animate {
	-webkit-animation:ripple 0.3s linear;
   -moz-animation:ripple 0.3s linear;
    -ms-animation:ripple 0.3s linear;
     -o-animation:ripple 0.3s linear;
        animation:ripple 0.3s linear;
}

@-webkit-keyframes ripple {
    100% {opacity: 0; -webkit-transform: scale(2.5);}
}
@-moz-keyframes ripple {
    100% {opacity: 0; -moz-transform: scale(2.5);}
}
@-o-keyframes ripple {
    100% {opacity: 0; -o-transform: scale(2.5);}
}
@keyframes ripple {
    100% {opacity: 0; transform: scale(2.5);}
}
.inner-two{
    height: 100%;
    width: 100%;
    border: 2px solid transparent;
	border-radius: 50%;
	padding: 5px;
    box-sizing: border-box;
	position:relative;
}
.inner-two.container {
  height: 175px;
    margin: 1%;
    position: relative;
	width: 175px;
}
.inner-two>img {
    height: 75px;
    width: 100px;
    position: absolute;
    top: 14px;
    left: 0px;
}
.ripplelink{
	 border: 2px solid #ffffff;
}
/* Landscape layout (with min-width) */
@media screen and (min-aspect-ratio: 1/1) and (-webkit-device-pixel-ratio: 1) and (min-width:600px) {
    #connectpage{
	font-size:20px;
	}
	#connectpage label,#connectpage input,#connectpage button{
	font-size:20px;
	}
	.col3{
	width: 25%;
    margin: 15px;
	}
	#uploadpage .lsidecontainer h1,#downloadspage .lsidecontainer h1,#summarypage .lsidecontainer h1,#youtubepage .lsidecontainer h1,#apppage .lsidecontainer h1,#cpanelpage h1,#cpanelpage .lsidecontainer h1{
	font-size:35px;
	}
	#cpanelpage h1,#uploadpage h1{
	font-size: 30px;
	}
	#youtubepage .rsidecontainer>.container{
		margin-top:5%;
	}
	#youtubepage .rsidecontainer>.container>img {
    width: 150px;
    height: 150px;
    margin-bottom: 0px;
	}
	.col2{
		margin:10px;
		width:42%;
	}
	.thumper h1{
		font-size:30px;
	}
	.col2 img{
		width:90%;
		padding:5%;
	}
	#youtubepage .rsidecontainer>.container{
		border-bottom: 1px solid #eee;
	}
	.back{
	position:fixed;
	bottom:0px;
	right: -40px;
	z-index:9999;
	font-size:30px;
	}
	.back>img{
		max-width:50%;
	}
	.appdetail h2{
	font-size: 25px;
	}
	.appdetail p{
	font-size: 15px;
	}
	.appicon>img{width:80px;height:75px;}
	.featured>img{height:60px;}
	.appblk{    margin: 5px 10px 5px 15px;}
	.appdetail{padding-top:5px;}
	.appdetail a {
		position: absolute;
		right: 5px;
		bottom: 5px;
		font-size: 12px;
	}
	.thumper h2{font-size:20px;}
	.yt1 {
    margin-right: 45px;
	}
	.thumper .col2 img{
		width:70%;
		padding:0 10%;
	}
	#downloadspage .col3{margin:0 15px;}
	#downloadspage .col3 img{
		padding:10px 20px;
		width:80%;
	}
	#timer3G,#timer4G{
	font-size:65px;
	margin-top:90px;
	}
	.circle{
	width:250px;
	height:250px;
	position:relative;
	}
	.thumper>.circle{
		height:200px;
		width:200px;
		margin: 75px 45px 0;
	}
	.circle span{
	margin-top: 38px;
    position: absolute;
    margin-left: 35px;
    font-size: 50px;
    color: #515151;
    font-family: 'vodafonebold';
	}
	#uploadpage .inner-two>img {
    height: 100px;
    width: 100px;
    position: absolute;
    top: 10px;
    left: 0px;
	}
	.thumper .col2 .overlay>img{
    width: 50px;
	}
	#summarypage .col2 img{
		width: 75px;
	}
	#summarypage .rsidecontainer>.container .col2 {
	margin: 75px 45px 0 0;
    width: 250px;
    text-align: center;
	}
	#summarypage .rsidecontainer>.container{
		margin-top:0px;
	}
	#summarypage .lsidecontainer h1{
		margin-left:10%;
		margin-top: 90%;
	}
	#cpanelpage .lsidecontainer h1{
		margin-top:100%;
	}
}

